ide/cps/src/parser/CompiscriptParser.ts
// Generated from src/grammar/Compiscript.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { CompiscriptListener } from "./CompiscriptListener";
import { CompiscriptVisitor } from "./CompiscriptVisitor";


export class CompiscriptParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly T__39 = 40;
	public static readonly T__40 = 41;
	public static readonly T__41 = 42;
	public static readonly T__42 = 43;
	public static readonly T__43 = 44;
	public static readonly T__44 = 45;
	public static readonly T__45 = 46;
	public static readonly T__46 = 47;
	public static readonly T__47 = 48;
	public static readonly T__48 = 49;
	public static readonly T__49 = 50;
	public static readonly T__50 = 51;
	public static readonly T__51 = 52;
	public static readonly T__52 = 53;
	public static readonly T__53 = 54;
	public static readonly T__54 = 55;
	public static readonly Literal = 56;
	public static readonly IntegerLiteral = 57;
	public static readonly StringLiteral = 58;
	public static readonly Identifier = 59;
	public static readonly WS = 60;
	public static readonly COMMENT = 61;
	public static readonly MULTILINE_COMMENT = 62;
	public static readonly RULE_program = 0;
	public static readonly RULE_statement = 1;
	public static readonly RULE_block = 2;
	public static readonly RULE_variableDeclaration = 3;
	public static readonly RULE_constantDeclaration = 4;
	public static readonly RULE_typeAnnotation = 5;
	public static readonly RULE_initializer = 6;
	public static readonly RULE_assignment = 7;
	public static readonly RULE_expressionStatement = 8;
	public static readonly RULE_printStatement = 9;
	public static readonly RULE_ifStatement = 10;
	public static readonly RULE_whileStatement = 11;
	public static readonly RULE_doWhileStatement = 12;
	public static readonly RULE_forStatement = 13;
	public static readonly RULE_foreachStatement = 14;
	public static readonly RULE_breakStatement = 15;
	public static readonly RULE_continueStatement = 16;
	public static readonly RULE_returnStatement = 17;
	public static readonly RULE_tryCatchStatement = 18;
	public static readonly RULE_switchStatement = 19;
	public static readonly RULE_switchCase = 20;
	public static readonly RULE_defaultCase = 21;
	public static readonly RULE_functionDeclaration = 22;
	public static readonly RULE_parameters = 23;
	public static readonly RULE_parameter = 24;
	public static readonly RULE_classDeclaration = 25;
	public static readonly RULE_classMember = 26;
	public static readonly RULE_expression = 27;
	public static readonly RULE_assignmentExpr = 28;
	public static readonly RULE_conditionalExpr = 29;
	public static readonly RULE_logicalOrExpr = 30;
	public static readonly RULE_logicalAndExpr = 31;
	public static readonly RULE_equalityExpr = 32;
	public static readonly RULE_relationalExpr = 33;
	public static readonly RULE_additiveExpr = 34;
	public static readonly RULE_multiplicativeExpr = 35;
	public static readonly RULE_unaryExpr = 36;
	public static readonly RULE_primaryExpr = 37;
	public static readonly RULE_literalExpr = 38;
	public static readonly RULE_leftHandSide = 39;
	public static readonly RULE_primaryAtom = 40;
	public static readonly RULE_suffixOp = 41;
	public static readonly RULE_arguments = 42;
	public static readonly RULE_arrayLiteral = 43;
	public static readonly RULE_type = 44;
	public static readonly RULE_baseType = 45;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "statement", "block", "variableDeclaration", "constantDeclaration", 
		"typeAnnotation", "initializer", "assignment", "expressionStatement", 
		"printStatement", "ifStatement", "whileStatement", "doWhileStatement", 
		"forStatement", "foreachStatement", "breakStatement", "continueStatement", 
		"returnStatement", "tryCatchStatement", "switchStatement", "switchCase", 
		"defaultCase", "functionDeclaration", "parameters", "parameter", "classDeclaration", 
		"classMember", "expression", "assignmentExpr", "conditionalExpr", "logicalOrExpr", 
		"logicalAndExpr", "equalityExpr", "relationalExpr", "additiveExpr", "multiplicativeExpr", 
		"unaryExpr", "primaryExpr", "literalExpr", "leftHandSide", "primaryAtom", 
		"suffixOp", "arguments", "arrayLiteral", "type", "baseType",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'{'", "'}'", "'let'", "'var'", "';'", "'const'", "'='", "':'", 
		"'.'", "'print'", "'('", "')'", "'if'", "'else'", "'while'", "'do'", "'for'", 
		"'foreach'", "'in'", "'break'", "'continue'", "'return'", "'try'", "'catch'", 
		"'switch'", "'case'", "'default'", "'function'", "','", "'class'", "'?'", 
		"'||'", "'&&'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", 
		"'*'", "'/'", "'%'", "'!'", "'null'", "'true'", "'false'", "'new'", "'this'", 
		"'['", "']'", "'boolean'", "'integer'", "'string'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		"Literal", "IntegerLiteral", "StringLiteral", "Identifier", "WS", "COMMENT", 
		"MULTILINE_COMMENT",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(CompiscriptParser._LITERAL_NAMES, CompiscriptParser._SYMBOLIC_NAMES, []);
    static CallExprContext: any;
    static IndexExprContext: any;
    static PropertyAccessExprContext: any;

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return CompiscriptParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Compiscript.g4"; }

	// @Override
	public get ruleNames(): string[] { return CompiscriptParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return CompiscriptParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(CompiscriptParser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, CompiscriptParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 95;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << CompiscriptParser.T__0) | (1 << CompiscriptParser.T__2) | (1 << CompiscriptParser.T__3) | (1 << CompiscriptParser.T__5) | (1 << CompiscriptParser.T__9) | (1 << CompiscriptParser.T__10) | (1 << CompiscriptParser.T__12) | (1 << CompiscriptParser.T__14) | (1 << CompiscriptParser.T__15) | (1 << CompiscriptParser.T__16) | (1 << CompiscriptParser.T__17) | (1 << CompiscriptParser.T__19) | (1 << CompiscriptParser.T__20) | (1 << CompiscriptParser.T__21) | (1 << CompiscriptParser.T__22) | (1 << CompiscriptParser.T__24) | (1 << CompiscriptParser.T__27) | (1 << CompiscriptParser.T__29))) !== 0) || ((((_la - 41)) & ~0x1F) === 0 && ((1 << (_la - 41)) & ((1 << (CompiscriptParser.T__40 - 41)) | (1 << (CompiscriptParser.T__44 - 41)) | (1 << (CompiscriptParser.T__45 - 41)) | (1 << (CompiscriptParser.T__46 - 41)) | (1 << (CompiscriptParser.T__47 - 41)) | (1 << (CompiscriptParser.T__48 - 41)) | (1 << (CompiscriptParser.T__49 - 41)) | (1 << (CompiscriptParser.T__50 - 41)) | (1 << (CompiscriptParser.Literal - 41)) | (1 << (CompiscriptParser.Identifier - 41)))) !== 0)) {
				{
				{
				this.state = 92;
				this.statement();
				}
				}
				this.state = 97;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 98;
			this.match(CompiscriptParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, CompiscriptParser.RULE_statement);
		try {
			this.state = 118;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 100;
				this.variableDeclaration();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 101;
				this.constantDeclaration();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 102;
				this.assignment();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 103;
				this.functionDeclaration();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 104;
				this.classDeclaration();
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 105;
				this.expressionStatement();
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 106;
				this.printStatement();
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 107;
				this.block();
				}
				break;

			case 9:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 108;
				this.ifStatement();
				}
				break;

			case 10:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 109;
				this.whileStatement();
				}
				break;

			case 11:
				this.enterOuterAlt(_localctx, 11);
				{
				this.state = 110;
				this.doWhileStatement();
				}
				break;

			case 12:
				this.enterOuterAlt(_localctx, 12);
				{
				this.state = 111;
				this.forStatement();
				}
				break;

			case 13:
				this.enterOuterAlt(_localctx, 13);
				{
				this.state = 112;
				this.foreachStatement();
				}
				break;

			case 14:
				this.enterOuterAlt(_localctx, 14);
				{
				this.state = 113;
				this.tryCatchStatement();
				}
				break;

			case 15:
				this.enterOuterAlt(_localctx, 15);
				{
				this.state = 114;
				this.switchStatement();
				}
				break;

			case 16:
				this.enterOuterAlt(_localctx, 16);
				{
				this.state = 115;
				this.breakStatement();
				}
				break;

			case 17:
				this.enterOuterAlt(_localctx, 17);
				{
				this.state = 116;
				this.continueStatement();
				}
				break;

			case 18:
				this.enterOuterAlt(_localctx, 18);
				{
				this.state = 117;
				this.returnStatement();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public block(): BlockContext {
		let _localctx: BlockContext = new BlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, CompiscriptParser.RULE_block);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 120;
			this.match(CompiscriptParser.T__0);
			this.state = 124;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << CompiscriptParser.T__0) | (1 << CompiscriptParser.T__2) | (1 << CompiscriptParser.T__3) | (1 << CompiscriptParser.T__5) | (1 << CompiscriptParser.T__9) | (1 << CompiscriptParser.T__10) | (1 << CompiscriptParser.T__12) | (1 << CompiscriptParser.T__14) | (1 << CompiscriptParser.T__15) | (1 << CompiscriptParser.T__16) | (1 << CompiscriptParser.T__17) | (1 << CompiscriptParser.T__19) | (1 << CompiscriptParser.T__20) | (1 << CompiscriptParser.T__21) | (1 << CompiscriptParser.T__22) | (1 << CompiscriptParser.T__24) | (1 << CompiscriptParser.T__27) | (1 << CompiscriptParser.T__29))) !== 0) || ((((_la - 41)) & ~0x1F) === 0 && ((1 << (_la - 41)) & ((1 << (CompiscriptParser.T__40 - 41)) | (1 << (CompiscriptParser.T__44 - 41)) | (1 << (CompiscriptParser.T__45 - 41)) | (1 << (CompiscriptParser.T__46 - 41)) | (1 << (CompiscriptParser.T__47 - 41)) | (1 << (CompiscriptParser.T__48 - 41)) | (1 << (CompiscriptParser.T__49 - 41)) | (1 << (CompiscriptParser.T__50 - 41)) | (1 << (CompiscriptParser.Literal - 41)) | (1 << (CompiscriptParser.Identifier - 41)))) !== 0)) {
				{
				{
				this.state = 121;
				this.statement();
				}
				}
				this.state = 126;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 127;
			this.match(CompiscriptParser.T__1);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public variableDeclaration(): VariableDeclarationContext {
		let _localctx: VariableDeclarationContext = new VariableDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, CompiscriptParser.RULE_variableDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 129;
			_la = this._input.LA(1);
			if (!(_la === CompiscriptParser.T__2 || _la === CompiscriptParser.T__3)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 130;
			this.match(CompiscriptParser.Identifier);
			this.state = 132;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === CompiscriptParser.T__7) {
				{
				this.state = 131;
				this.typeAnnotation();
				}
			}

			this.state = 135;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === CompiscriptParser.T__6) {
				{
				this.state = 134;
				this.initializer();
				}
			}

			this.state = 137;
			this.match(CompiscriptParser.T__4);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public constantDeclaration(): ConstantDeclarationContext {
		let _localctx: ConstantDeclarationContext = new ConstantDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, CompiscriptParser.RULE_constantDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 139;
			this.match(CompiscriptParser.T__5);
			this.state = 140;
			this.match(CompiscriptParser.Identifier);
			this.state = 142;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === CompiscriptParser.T__7) {
				{
				this.state = 141;
				this.typeAnnotation();
				}
			}

			this.state = 144;
			this.match(CompiscriptParser.T__6);
			this.state = 145;
			this.expression();
			this.state = 146;
			this.match(CompiscriptParser.T__4);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public typeAnnotation(): TypeAnnotationContext {
		let _localctx: TypeAnnotationContext = new TypeAnnotationContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, CompiscriptParser.RULE_typeAnnotation);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 148;
			this.match(CompiscriptParser.T__7);
			this.state = 149;
			this.type();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public initializer(): InitializerContext {
		let _localctx: InitializerContext = new InitializerContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, CompiscriptParser.RULE_initializer);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 151;
			this.match(CompiscriptParser.T__6);
			this.state = 152;
			this.expression();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public assignment(): AssignmentContext {
		let _localctx: AssignmentContext = new AssignmentContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, CompiscriptParser.RULE_assignment);
		try {
			this.state = 166;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 6, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 154;
				this.match(CompiscriptParser.Identifier);
				this.state = 155;
				this.match(CompiscriptParser.T__6);
				this.state = 156;
				this.expression();
				this.state = 157;
				this.match(CompiscriptParser.T__4);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 159;
				this.expression();
				this.state = 160;
				this.match(CompiscriptParser.T__8);
				this.state = 161;
				this.match(CompiscriptParser.Identifier);
				this.state = 162;
				this.match(CompiscriptParser.T__6);
				this.state = 163;
				this.expression();
				this.state = 164;
				this.match(CompiscriptParser.T__4);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public expressionStatement(): ExpressionStatementContext {
		let _localctx: ExpressionStatementContext = new ExpressionStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, CompiscriptParser.RULE_expressionStatement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 168;
			this.expression();
			this.state = 169;
			this.match(CompiscriptParser.T__4);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public printStatement(): PrintStatementContext {
		let _localctx: PrintStatementContext = new PrintStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, CompiscriptParser.RULE_printStatement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 171;
			this.match(CompiscriptParser.T__9);
			this.state = 172;
			this.match(CompiscriptParser.T__10);
			this.state = 173;
			this.expression();
			this.state = 174;
			this.match(CompiscriptParser.T__11);
			this.state = 175;
			this.match(CompiscriptParser.T__4);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ifStatement(): IfStatementContext {
		let _localctx: IfStatementContext = new IfStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, CompiscriptParser.RULE_ifStatement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 177;
			this.match(CompiscriptParser.T__12);
			this.state = 178;
			this.match(CompiscriptParser.T__10);
			this.state = 179;
			this.expression();
			this.state = 180;
			this.match(CompiscriptParser.T__11);
			this.state = 181;
			this.block();
			this.state = 184;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === CompiscriptParser.T__13) {
				{
				this.state = 182;
				this.match(CompiscriptParser.T__13);
				this.state = 183;
				this.block();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public whileStatement(): WhileStatementContext {
		let _localctx: WhileStatementContext = new WhileStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, CompiscriptParser.RULE_whileStatement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 186;
			this.match(CompiscriptParser.T__14);
			this.state = 187;
			this.match(CompiscriptParser.T__10);
			this.state = 188;
			this.expression();
			this.state = 189;
			this.match(CompiscriptParser.T__11);
			this.state = 190;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public doWhileStatement(): DoWhileStatementContext {
		let _localctx: DoWhileStatementContext = new DoWhileStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, CompiscriptParser.RULE_doWhileStatement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 192;
			this.match(CompiscriptParser.T__15);
			this.state = 193;
			this.block();
			this.state = 194;
			this.match(CompiscriptParser.T__14);
			this.state = 195;
			this.match(CompiscriptParser.T__10);
			this.state = 196;
			this.expression();
			this.state = 197;
			this.match(CompiscriptParser.T__11);
			this.state = 198;
			this.match(CompiscriptParser.T__4);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public forStatement(): ForStatementContext {
		let _localctx: ForStatementContext = new ForStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, CompiscriptParser.RULE_forStatement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 200;
			this.match(CompiscriptParser.T__16);
			this.state = 201;
			this.match(CompiscriptParser.T__10);
			this.state = 205;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case CompiscriptParser.T__2:
			case CompiscriptParser.T__3:
				{
				this.state = 202;
				this.variableDeclaration();
				}
				break;
			case CompiscriptParser.T__10:
			case CompiscriptParser.T__40:
			case CompiscriptParser.T__44:
			case CompiscriptParser.T__45:
			case CompiscriptParser.T__46:
			case CompiscriptParser.T__47:
			case CompiscriptParser.T__48:
			case CompiscriptParser.T__49:
			case CompiscriptParser.T__50:
			case CompiscriptParser.Literal:
			case CompiscriptParser.Identifier:
				{
				this.state = 203;
				this.assignment();
				}
				break;
			case CompiscriptParser.T__4:
				{
				this.state = 204;
				this.match(CompiscriptParser.T__4);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 208;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === CompiscriptParser.T__10 || ((((_la - 41)) & ~0x1F) === 0 && ((1 << (_la - 41)) & ((1 << (CompiscriptParser.T__40 - 41)) | (1 << (CompiscriptParser.T__44 - 41)) | (1 << (CompiscriptParser.T__45 - 41)) | (1 << (CompiscriptParser.T__46 - 41)) | (1 << (CompiscriptParser.T__47 - 41)) | (1 << (CompiscriptParser.T__48 - 41)) | (1 << (CompiscriptParser.T__49 - 41)) | (1 << (CompiscriptParser.T__50 - 41)) | (1 << (CompiscriptParser.Literal - 41)) | (1 << (CompiscriptParser.Identifier - 41)))) !== 0)) {
				{
				this.state = 207;
				this.expression();
				}
			}
